# Fizziks

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Fizziks.sln  FizziksConfig.cmake.in  README.md  build.sh
.github/workflows/: ci.yml  release.yml
Fizziks/: Fizziks.vcxproj  Fizziks.vcxproj.filters
dependencies/: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/Fizziks/: AABB.h  BodyDef.h  BodyDefBuilder.h  Dense.h  FizzLog.h  FizzWorld.h  Fizziks.h  Log.h  MathUtils.h  Ray.h  RigidBody.h  RigidDef.h  Shape.h  Types.h  Vec.h
engine/internal/Fizziks/: Allocator.h  BVH.h  BitArray.h  BroadPhase.h  Collider.h  ContactKey.h  FizzLog.h  FizzShape.h  FizzWorldImpl.h  Handle.h  InternalLog.h  LinearAllocator.h  Log.h  Pool.h  RigidBodyImpl.h  ScopeProfiler.h  ShapeP.h  SimpleBP.h  ThreadPool.h  UniformGrid2D.h  VecMap.h  VecOps.h  VectorP.h
engine/src/: AABB.cpp  BVH.cpp  BitArray.cpp  Collider.cpp  Dense.cpp  FizzWorld.cpp  Fizziks.cpp  LinearAllocator.cpp  Log.cpp  MathUtils.cpp  Ray.cpp  RigidBody.cpp  RigidDef.cpp  ScopeProfiler.cpp  Shape.cpp  SimpleBP.cpp  ThreadPool.cpp  UniformGrid2D.cpp  Vec.cpp  fizziks.cpp
include/Fizziks/: BodyDef.h  Dense.h  FizzWorld.h  Handle.h  Pool.h  RigidBody.h  Shape.h
internal/Fizziks/: BitArray.h  Pool.h  UniformGrid.h  UniformGrid2D.h
src/: BitArray.cpp  Dense.cpp  FizzWorld.cpp  RigidBody.cpp  Shape.cpp  UniformGrid2D.cpp  fizziks.cpp
tests/: CMakeLists.txt  TestTypes.h
tests/integration/: RigidBodyIntTest.cpp
tests/unit/: MatTest.cpp  VecTest.cpp
